--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <div id="title_bar">
   <div id="title">
     <h1 class="page_title">Olivehill</h1>
-    <p class="lastupdate">09/03/2020 01:49:00 PM</p>
+    <p class="lastupdate">09/03/2020 01:54:00 PM</p>
   </div>
   <div id="rss_link"><a href="rss.xml">RSS</a></div>
   <div id="reports">
@@ -50,19 +50,19 @@
     <tbody>
       <tr>
         <td class="label">Outside Temperature</td>
-        <td class="data">95.3&#176;F</td>
+        <td class="data">96.0&#176;F</td>
       </tr>
       <tr>
         <td class="label">Heat Index</td>
-        <td class="data">95.3&#176;F</td>
+        <td class="data">96.0&#176;F</td>
       </tr>
       <tr>
         <td class="label">Wind Chill</td>
-        <td class="data">95.3&#176;F</td>
+        <td class="data">96.0&#176;F</td>
       </tr>
       <tr>
         <td class="label">Dew Point</td>
-        <td class="data">53.9&#176;F</td>
+        <td class="data">54.4&#176;F</td>
       </tr>
       <tr>
         <td class="label">Humidity</td>
@@ -70,11 +70,11 @@
       </tr>
       <tr>
         <td class="label">Barometer</td>
-        <td class="data">29.917 inHg (-0.085)</td>
+        <td class="data">29.913 inHg (-0.086)</td>
       </tr>
       <tr>
         <td class="label">Wind</td>
-        <td class="data">2 mph SSE (158&#176;)</td>
+        <td class="data">4 mph N (0&#176;)</td>
       </tr>
       <tr>
         <td class="label">Rain Rate</td>
@@ -86,11 +86,11 @@
       </tr>
       <tr>
         <td class="label">Inside Temperature</td>
-        <td class="data">80.0&#176;F</td>
+        <td class="data">80.1&#176;F</td>
       </tr>
       <tr>
         <td class="label">Inside Humidity</td>
-        <td class="data">47%</td>
+        <td class="data">48%</td>
       </tr>
     </tbody>
   </table>
@@ -153,20 +153,20 @@
       <tr>
         <td class="label">Outside Temperature</td>
         <td class="data new_row hilo_day">
-          <span title="01:49:00 PM">
-            95.3</span><br/>
+          <span title="01:53:48 PM">
+            96.0</span><br/>
           <span title="05:52:55 AM">
             54.7</span>
         </td>
         <td class="data new_row hilo_week">
-          <span title="01:49:00 PM (Thursday)">
-            95.3</span><br/>
+          <span title="01:53:48 PM (Thursday)">
+            96.0</span><br/>
           <span title="06:21:16 AM (Sunday)">
             49.7</span>
         </td>
         <td class="data new_row hilo_month">
-          <span title="09/03/2020 01:49:00 PM">
-            95.3</span><br/>
+          <span title="09/03/2020 01:53:48 PM">
+            96.0</span><br/>
           <span title="09/01/2020 06:47:50 AM">
             50.8</span>
         </td>
@@ -187,16 +187,16 @@
       <tr>
         <td class="label">Heat Index</td>
         <td class="data new_row hilo_day">
-          <span title="01:49:00 PM" class="hival">
-            95.3</span>
+          <span title="01:53:48 PM" class="hival">
+            96.0</span>
         </td>
         <td class="data new_row hilo_week">
-          <span title="01:49:00 PM (Thursday)" class="hival">
-            95.3</span>
+          <span title="01:53:48 PM (Thursday)" class="hival">
+            96.0</span>
         </td>
         <td class="data new_row hilo_month">
-          <span title="09/03/2020 01:49:00 PM" class="hival">
-            95.3</span>
+          <span title="09/03/2020 01:53:48 PM" class="hival">
+            96.0</span>
         </td>
         <td class="data new_row hilo_year">
           <span title="08/16/2020 03:43:16 PM" class="hival">
@@ -305,8 +305,8 @@
         <td class="data new_row hilo_day">
           <span title="08:26:02 AM">
             30.035</span><br/>
-          <span title="01:48:02 PM">
-            29.917</span>
+          <span title="01:52:02 PM">
+            29.913</span>
         </td>
         <td class="data new_row hilo_week">
           <span title="09:40:02 AM (Wednesday)">
@@ -470,8 +470,8 @@
       <tr>
         <td class="label">Inside Temperature</td>
         <td class="data new_row hilo_day">
-          <span title="01:48:02 PM">
-            80.0</span><br/>
+          <span title="01:52:02 PM">
+            80.1</span><br/>
           <span title="06:56:02 AM">
             68.2</span>
         </td>
@@ -564,7 +564,7 @@
     <tr><th>Connectivity</th><th></th></tr>
     <tr>
       <td class="label">Signal Quality</td>
-      <td class="data">98%</td>
+      <td class="data">90%</td>
     </tr>
 
     <tr><th>Battery Status</th><th></th></tr>
@@ -610,11 +610,11 @@
     </tr>
     <tr>
       <td class="label">Server uptime</td>
-      <td class="data">1 day, 23 hours, 2 minutes</td>
+      <td class="data">1 day, 23 hours, 7 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX uptime</td>
-      <td class="data">1 day, 23 hours, 2 minutes</td>
+      <td class="data">1 day, 23 hours, 7 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX version</td>
